--- a/css/styles.css
+++ b/css/styles.css
@@ -103,22 +103,39 @@ h1 {
     color: var(--black-color)
 }
 
+.list{
+    list-style: none;
+}
+
 .main-button {
     font-size: 16px;
     line-height: 1.87;
     font-weight: 700;
+    width: 200px;
+    height: 50px;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     background-color: var(--brand-color);
     color: var(--white-color)
 }
 
 .filter-button {
     font-size: 16px;
+    font-weight: 500;
     line-height: 1.62;
+    border: none;
+    border-radius: 4px;
+    height: 38px;
+    background: #F5F4FA;
     color: var(--black-color)
+    
 }
 
 .filter-button:focus{
     background-color: var(--brand-color);
+    border-radius: 4px;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     color: var(--white-color);
 }
 
