--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,13 @@ h1 {
     
 }
 
+.filter-button:hover{
+    background-color: var(--brand-color);
+    border-radius: 4px;
+     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    color: var(--white-color);
+}
+
 .filter-button:focus{
     background-color: var(--brand-color);
     border-radius: 4px;
